--- a/core/templates/dashboard/customer/sidebar.html
+++ b/core/templates/dashboard/customer/sidebar.html
@@ -50,7 +50,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="">
+              <a class="nav-link " href="{% url 'dashboard:customer:wishlist' %}">
                 <i class="bi-heart nav-icon"></i>لیست علایق
               </a>
             </li>
