--- a/core/templates/includes/latest-products.html
+++ b/core/templates/includes/latest-products.html
@@ -16,16 +16,16 @@
             <div class="card card-bordered shadow-none text-center h-100">
                 <div class="card-pinned">
                     <img class="card-img-top" src="{{latest_product.image.url}}" alt="Image Description">
-                    {% if request.user.is_authenticated %}
+
                     <div class="card-pinned-top-end">
                         <button type="button"
                                 class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if latest_product.id in wishlist_items %} active {% endif %}"
                                 data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
-                                onclick="addToWishlist(this,`{{latest_product.id}}`)">
+                                onclick="addToWishlist_1(this,`{{ latest_product.id }}`)">
                             <i class="bi-heart"></i>
                         </button>
                     </div>
-                    {% endif %}
+
                 </div>
 
                 <div class="card-body">
@@ -152,6 +152,36 @@
             }
         });
     }
+    function addToWishlist_1(element,product_id) {
+
+            //console.log(product_id)
+            $.ajax({
+                url: "{%  url 'shop:add-to-wishlist' %}",
+                method: 'POST',
+                data: {
+                    product_id: product_id,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+
+                },
+                success: function (response) {
+
+                    Toastify({
+                        text:response.message,
+                        className: `info`,
+                        style: {
+                          background: "blue",
+                        }
+                      }).showToast();
+                    $(element).toggleClass('active');
+
+                    // do something with the response data
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                    // handle the error case
+                }
+            });
+        }
 
 </script>
 {% endblock %}
