--- a/core/templates/includes/similar-products.html
+++ b/core/templates/includes/similar-products.html
@@ -13,16 +13,17 @@
             <div class="card card-bordered shadow-none text-center h-100">
                 <div class="card-pinned">
                     <img class="card-img-top" src="{{similar_prodcut.image.url}}" alt="Image Description">
-                    {% if request.user.is_authenticated %}
+
                     <div class="card-pinned-top-end">
                         <button type="button"
                             class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if similar_prodcut.id in wishlist_items %} active {% endif %}"
                             data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
-                            onclick="addToWishlist(this,`{{similar_prodcut.id}}`)">
+                            onclick="addToWishlist_1(this, {{ similar_prodcut.id }})">
                             <i class="bi-heart"></i>
                         </button>
+
                     </div>
-                    {% endif %}
+
                 </div>
 
                 <div class="card-body">
@@ -86,3 +87,36 @@
     <!-- End Row -->
 </div>
 <!-- End Card Grid -->
+<script>
+    function addToWishlist_1(element,product_id) {
+
+            //console.log(product_id)
+            $.ajax({
+                url: "{%  url 'shop:add-to-wishlist' %}",
+                method: 'POST',
+                data: {
+                    product_id: product_id,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+
+                },
+                success: function (response) {
+
+                    Toastify({
+                        text:response.message,
+                        className: `info`,
+                        style: {
+                          background: "blue",
+                        }
+                      }).showToast();
+                    $(element).toggleClass('active');
+
+                    // do something with the response data
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                    // handle the error case
+                }
+            });
+        }
+
+</script>
