--- a/core/templates/shop/product-detail.html
+++ b/core/templates/shop/product-detail.html
@@ -139,13 +139,13 @@
                     <div class="col">
                         <span class="d-block small">تعداد را انتخاب کنید</span>
                         <input type="number"
-                           id="quantity-{{ object.id }}"
-                           class="js-result form-control form-control-quantity-counter"
-                           name="quantity"
-                           min="1"
-                           max="9"
-                           value="1"
-                           onchange="updateQuantity({{ object.product.id }}, this.value)">
+                               id="quantity-{{ object.id }}"
+                               class="js-result form-control form-control-quantity-counter"
+                               name="quantity"
+                               min="1"
+                               max="9"
+                               value="1"
+                               onchange="updateQuantity({{ object.product.id }}, this.value)">
                     </div>
 
 
@@ -248,9 +248,11 @@
             </div>
             <!-- End Accordion -->
 
-            <button type="button" class="btn btn-primary btntransition"
-                    onclick="addToWishlist(this, '{{ object.id }}', document.getElementById('quantity-{{ object.id }}').value)">
-                افزودن به سبد خرید
+            <button type="button"
+                    class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if object.id in wishlist_items %}active{% endif %}"
+                    data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
+                    onclick="addToWishlist_1(this, '{{ object.id }}')">
+                <i class="bi-heart"></i>
             </button>
 
 
@@ -597,6 +599,9 @@
     </div>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     function updateQuantity(product_id, quantity) {
         $.ajax({
@@ -621,4 +626,35 @@
     }
 
 </script>
+<script>
+    function addToWishlist_1(element, product_id) {
+
+        $.ajax({
+            url: "{%  url 'shop:add-to-wishlist' %}",
+            method: 'POST',
+            data: {
+                product_id: product_id,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
+
+            },
+            success: function (response) {
+                Toastify({
+                    text: response.message,
+                    className: `info`,
+                    style: {
+                        background: "blue",
+                    }
+                }).showToast();
+                $(element).toggleClass('active');
+
+                // do something with the response data
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(errorThrown);
+                // handle the error case
+            }
+        });
+    }
+</script>
+
 {% endblock content %}
