--- a/core/templates/includes/similar-products.html
+++ b/core/templates/includes/similar-products.html
@@ -13,7 +13,7 @@
             <div class="card card-bordered shadow-none text-center h-100">
                 <div class="card-pinned">
                     <img class="card-img-top" src="{{similar_prodcut.image.url}}" alt="Image Description">
-
+                    {% if request.user.is_authenticated %}
                     <div class="card-pinned-top-end">
                         <button type="button"
                             class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if similar_prodcut.id in wishlist_items %} active {% endif %}"
@@ -23,6 +23,7 @@
                         </button>
 
                     </div>
+                    {% endif %}
 
                 </div>
 
