--- a/core/templates/includes/latest-products.html
+++ b/core/templates/includes/latest-products.html
@@ -18,12 +18,17 @@
                     <img class="card-img-top" src="{{latest_product.image.url}}" alt="Image Description">
 
                     <div class="card-pinned-top-end">
-                        <button type="button"
-                                class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if latest_product.id in wishlist_items %} active {% endif %}"
-                                data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
-                                onclick="addToWishlist_1(this,`{{ latest_product.id }}`)">
-                            <i class="bi-heart"></i>
-                        </button>
+                        <div class="card-pinned-top-end">
+                            {% if request.user.is_authenticated %}
+                            <button type="button"
+                                    class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if latest_product.id in wishlist_items %} active {% endif %}"
+                                    data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
+                                    onclick="addToWishlist_1(this, {{ latest_product.id }})">
+                                <i class="bi-heart"></i>
+                            </button>
+                            {% endif %}
+                        </div>
+
                     </div>
 
                 </div>
@@ -103,7 +108,8 @@
 {% block extra_js %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script>
     function addToCart(product_id) {
 
@@ -152,36 +158,37 @@
             }
         });
     }
-    function addToWishlist_1(element,product_id) {
 
-            //console.log(product_id)
-            $.ajax({
-                url: "{%  url 'shop:add-to-wishlist' %}",
-                method: 'POST',
-                data: {
-                    product_id: product_id,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
+    function addToWishlist_1(element, product_id) {
 
-                },
-                success: function (response) {
+        //console.log(product_id)
+        $.ajax({
+            url: "{%  url 'shop:add-to-wishlist' %}",
+            method: 'POST',
+            data: {
+                product_id: product_id,
+                csrfmiddlewaretoken: '{{ csrf_token }}'
 
-                    Toastify({
-                        text:response.message,
-                        className: `info`,
-                        style: {
-                          background: "blue",
-                        }
-                      }).showToast();
-                    $(element).toggleClass('active');
+            },
+            success: function (response) {
 
-                    // do something with the response data
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    console.log(errorThrown);
-                    // handle the error case
-                }
-            });
-        }
+                Toastify({
+                    text: response.message,
+                    className: `info`,
+                    style: {
+                        background: "blue",
+                    }
+                }).showToast();
+                $(element).toggleClass('active');
+
+                // do something with the response data
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(errorThrown);
+                // handle the error case
+            }
+        });
+    }
 
 </script>
 {% endblock %}
