--- a/core/templates/includes/similar-products.html
+++ b/core/templates/includes/similar-products.html
@@ -88,6 +88,8 @@
     <!-- End Row -->
 </div>
 <!-- End Card Grid -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     function addToWishlist_1(element,product_id) {
 
