--- a/core/templates/shop/product-detail.html
+++ b/core/templates/shop/product-detail.html
@@ -89,7 +89,7 @@
                 <button type="button"
                         class="btn btn-outline-secondary btn-xs btn-icon rounded-circle {% if is_wished %} active {% endif %}"
                         data-bs-toggle="tooltip" data-bs-placement="top" title="افزودن به علایق"
-                        onclick="addToWishlist(this,`{{object.id}}`)">
+                        onclick="addToWishlist_1(this,`{{object.id}}`)">
                     <i class="bi-heart"></i>
                 </button>
                 {% endif %}
