--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -188,8 +188,6 @@
                                         onclick="addToWishlist_1(this, '{{ object.id }}')">
                                     <i class="bi-heart"></i>
                                 </button>
-
-
                                 {% endif %}
 
 
@@ -397,7 +395,9 @@
 {% block extra_js %}
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 <script>
 
@@ -496,7 +496,7 @@
 
                 },
                 success: function (response) {
-                    window.location.reload();
+
                     Toastify({
                         text:response.message,
                         className: `info`,
@@ -517,5 +517,5 @@
 
 
 </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 {% endblock %}
