Create Review Template

--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -517,5 +517,12 @@
 
 
 </script>
+<script>
+    function changePage(pageNumber) {
+        const url = new URL(window.location.href);
+        url.searchParams.set('page', pageNumber);
+        window.location.href = url.toString();
+    }
+</script>
 
 {% endblock %}
