Create Users And Contact And Newsletter

--- a/core/templates/dashboard/admin/sidebar.html
+++ b/core/templates/dashboard/admin/sidebar.html
@@ -66,7 +66,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="">
+              <a class="nav-link " href="{% url 'dashboard:admin:contact-list' %}">
                 <i class="bi-envelope nav-icon"></i> تیکت ها
               </a>
             </li>
@@ -79,12 +79,12 @@
           <!-- List -->
           <ul class="nav nav-sm nav-tabs nav-vertical mb-4">
             <li class="nav-item">
-              <a class="nav-link " href="">
+              <a class="nav-link " href="{% url 'dashboard:admin:users-list' %}">
                 <i class="bi-person nav-icon"></i> لیست کاربران
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="">
+              <a class="nav-link " href="{% url 'dashboard:admin:newsletter-list' %}">
                 <i class="bi-newspaper nav-icon"></i> خبرنامه
               </a>
             </li>
