--- a/core/templates/basses/base.html
+++ b/core/templates/basses/base.html
@@ -118,11 +118,11 @@
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="{% url 'dashboard:home' %}">پروفایل</a>
-                            <a class="dropdown-item" href="{% url 'accounts:logout' %}">خروج</a>
+                            <a class="dropdown-item" href="{% url 'logout' %}">خروج</a>
                         </div>
 
                         {% else %}
-                        <a class="btn btn-primary btn-transition" href="{% url 'accounts:login' %}">ورود</a>
+                        <a class="btn btn-primary btn-transition" href="{% url 'login' %}">ورود</a>
                         {% endif %}
                     </li>
                 </ul>
