--- a/core/templates/shop/product-grid.html
+++ b/core/templates/shop/product-grid.html
@@ -244,7 +244,7 @@
                                 افزودن به سبد خرید
                             </a>
                             {% else %}
-                            <a href="{% url 'accounts:login' %}?next={{ request.path }}" type="button"
+                            <a href="{% url 'login' %}?next={{ request.path }}" type="button"
                                class="btn btn-outline-primary btn-sm btn-transition rounded-pill">
                                 افزودن به سبد خرید
                             </a>
