--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -11,7 +11,7 @@
         <!-- End Heading -->
 
         <!-- Form -->
-        <form action="{% url 'accounts:login' %}" method="POST" id="login-form">
+        <form action="{% url 'login' %}" method="POST" id="login-form">
             {% csrf_token %}
 
             <!-- Email -->
@@ -55,12 +55,12 @@
 
             <!-- Submit -->
             <div class="d-grid mb-3">
-                <a class="form-label-link" href="./page-reset-password-simple.html">رمز عبور را فراموش کرده‌اید؟</a>
+                <a class="form-label-link" href="{% url 'password_reset' %}">رمز عبور را فراموش کرده‌اید؟</a>
                 <button type="submit" class="btn btn-primary btn-lg">ورود</button>
             </div>
 
             <div class="text-center">
-                <p>حساب کاربری ندارید؟ <a class="link" href="{% url 'accounts:signup' %}">اینجا ثبت‌نام کنید</a></p>
+                <p>حساب کاربری ندارید؟ <a class="link" href="{% url 'signup' %}">اینجا ثبت‌نام کنید</a></p>
             </div>
         </form>
         <!-- End Form -->
