--- a/core/templates/dashboard/admin/base.html
+++ b/core/templates/dashboard/admin/base.html
@@ -116,11 +116,11 @@
 
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                 <a class="dropdown-item" href="{% url 'dashboard:home' %}">پروفایل</a>
-                                <a class="dropdown-item" href="{% url 'accounts:logout' %}">خروج</a>
+                                <a class="dropdown-item" href="{% url 'logout' %}">خروج</a>
                             </div>
 
                             {% else %}
-                            <a class="btn btn-primary btn-transition" href="{% url 'accounts:login' %}">ورود</a>
+                            <a class="btn btn-primary btn-transition" href="{% url 'login' %}">ورود</a>
                             {% endif %}
                         </li>
                     </ul>
@@ -155,7 +155,7 @@
 
                     <div class="col-auto">
                         <div class="d-none d-lg-block">
-                            <a class="btn btn-soft-light btn-sm" href="{% url 'accounts:logout' %}">خروج</a>
+                            <a class="btn btn-soft-light btn-sm" href="{% url 'logout' %}">خروج</a>
                         </div>
                         <!-- Responsive Toggle Button -->
                         <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
